fix z-index on nav logo scroll

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -27,7 +27,7 @@ nav {
     grid-template-columns: 1fr 1fr 1fr;
     padding: 1em;
     position: absolute;
-    z-index: 100;
+    z-index: 98;
 }
 
 .nav-scroll {
@@ -87,10 +87,10 @@ nav > * {
 #menu-container {
     position: fixed;
     z-index: 99;
-    top: 0;
+    top: var(--menu-height);
     right: -100%;
     width: 100%;
-    height: 100%;
+    height: calc(100% - var(--menu-height));
     background-color: var(--clr-dark);
     transition: all 0.6s ease;
 }
